--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <title>Двери-КИТ</title>
 </head>
 
-<body>
+<body class="page">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
