--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Двери-КИТ: Хорошему человеку - хороший товар!" />
+  <meta name="description"
+    content="Двери-КИТ, магазин дверей 'Купцалов И Товарищи'. Здесь можно купить межкомнатные
+    двери, входные двери, автоматические ворота, жалюзи, окна, в наличии и под заказ. Установка, доставка, гарантия." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Двери-КИТ</title>
