fix: correct Social, Home components

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description"
     content="Двери-КИТ, магазин дверей 'Купцалов И Товарищи'. Здесь можно купить межкомнатные
     двери, входные двери, автоматические ворота, жалюзи, окна, в наличии и под заказ. Установка, доставка, гарантия." />
+  <meta name="keywords"
+    content="купить, входные двери,межкомнатные двери, ворота, рольставни, окна, двери Новочебоксарск, двери Канаше" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Двери-КИТ</title>
