--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Двери и Окна ОРТ, магазин дверей. Здесь можно купить межкомнатные
+    двери, входные двери, автоматические ворота, жалюзи, окна, в наличии и под заказ. Установка, доставка, гарантия."
+    />
+    <meta
+      name="keywords"
+      content="купить, входные двери,межкомнатные двери, ворота, рольставни, окна, двери Новочебоксарск"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Двери и Окна ОРТ</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="Двери-КИТ, магазин дверей 'Купцалов И Товарищи'. Здесь можно купить межкомнатные
-    двери, входные двери, автоматические ворота, жалюзи, окна, в наличии и под заказ. Установка, доставка, гарантия." />
-  <meta name="keywords"
-    content="купить, входные двери,межкомнатные двери, ворота, рольставни, окна, двери Новочебоксарск, двери Канаше" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Двери-КИТ</title>
-</head>
-
-<body class="page">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body class="page">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
